    ADDED: selection dialog option: Apply selection to directories
    ADDED: option: Startup > User Interface > Update default panel settings
    ADDED: dbus interface: org.krusader.Instance.openUrl(QString url)
    ADDED: search dialog > feed to listbox:
           search parameters are saved as metadata in the virtual fs
           and displayed in panel's statusbar
    ADDED: filter option: Apply filter to directories
    ADDED: action: view > Apply settings to other tabs
    ADDED: action: view > Save settings as default (for new instances of this view type)
    ADDED: option: Panel > View > Locale aware sorting

    CHANGED: Konfigurator: "apply" takes effect immediately.
    CHANGED: url commandline argument: if there is already a tab open with that url,
             it is activated, otherwise a new tab is opened in the active panel

    FIXED: When trying to close Konfigurator but canceling the "Apply changes ?" dialog,
           Konfigurator it is closed anyway.
    FIXED: [ 3073211 ] Wrong quoting when opening file in external editor
    FIXED: [ 3059457 ] new panel uses default columns instead of configured ones
    FIXED: [ 2898151 ] also in view-mode (F3) possible to edit, thanks to Kevin Kofler
    FIXED: panelpopup viewer: error messageboxes when file cannot be displayed
    FIXED: [ 2981303 ] Viewer/editor unused submenu Game, thanks to Kevin Kofler
    FIXED: regression making single-click mode unusable, thanks to Kevin Kofler
    FIXED: [ 3003338 ] Rename selects extension regression, thanks to Kevin Kofler
    FIXED: [ 2980201 ] KrViewer doesn't handle binary files well (this fix works only for local files !)
    FIXED: "sort by" useractions change sorting direction randomly
    FIXED: [ 3028599 ] Sorting criteria is not saved at exit
    FIXED: [ 2949337 ] splitter ui bug
    FIXED: [ 2843749 ] view item is deselected when updated
    FIXED: brief view: mouse wheel doesn't work