@@ -1,3 +1,4 @@
+    ADDED: actions: Move Focus Up/Down - shortcut: CTRL+SHIFT+Up/Down
     ADDED: selection dialog option: Apply selection to directories
     ADDED: option: Startup > User Interface > Update default panel settings
     ADDED: dbus interface: org.krusader.Instance.openUrl(QString url)
